"Make Cookbook" button generates PDF of a recipe.
Serve PDF to the browser and handle XHR download.

Logging configuration.

Test PDF generation
